# AutonomousRC

./: .gitignore  README.md
ArduinoCarInterface/: ArduinoCarInterface.ino  Common.h  PWMController.cpp  PWMController.h  RCCarInterface.ino  SerialHandler.cpp  SerialHandler.h  Utilities.h
ArduinoInterface/: ArduinoInterface.ino  LCD.h  PWMController.cpp  PWMController.h  SerialHandler.cpp  SerialHandler.h
NodeMCUCarInterface/: LED.h  NodeMCUCarInterface.ino  Switch.h
NodeMCUInterface/: LED.h  NodeMCUInterface.ino  Switch.h
catkin_ws/: test_one.bag
catkin_ws/devel/: .catkin  _setup_util.py
catkin_ws/devel/include/common_msgs/: Cone.h  ConeMap.h  Control.h  PIDDebug.h  VehState.h
catkin_ws/devel/include/common_srvs/: ConeMap.h  ConeMapRequest.h  ConeMapResponse.h  Path.h  PathRequest.h  PathResponse.h
catkin_ws/devel/lib/arduino_interface/: arduino_interface
catkin_ws/devel/lib/keyboard_control/: keyboard_control
catkin_ws/devel/lib/pkgconfig/: arduino_interface.pc  common_msgs.pc  common_srvs.pc  common_utilities.pc  keyboard_control.pc
catkin_ws/devel/share/arduino_interface/cmake/: arduino_interfaceConfig.cmake
catkin_ws/devel/share/common_msgs/cmake/: common_msgs-msg-paths.cmake  common_msgsConfig.cmake
catkin_ws/devel/share/common_srvs/cmake/: common_srvs-msg-extras.cmake  common_srvs-msg-paths.cmake  common_srvsConfig.cmake
catkin_ws/src/02_control/depth_image/depth_image_controller/: CMakeLists.txt  setup.py
catkin_ws/src/02_control/depth_image/depth_image_controller/launch/: py_centerline_follower_circles.launch
catkin_ws/src/control/cone_map/circle_through_3_cones/: CMakeLists.txt
catkin_ws/src/control/cone_map/circle_through_3_cones/include/circle_through_3_cones/: controller.h
catkin_ws/src/control/cone_map/circle_through_3_cones/launch/: circle_through_3_cones.launch  cone_midpoint_control_2v2.launch
catkin_ws/src/control/cone_map/circle_through_3_cones/src/: .controller.cpp.swp  controller.cpp
catkin_ws/src/control/cone_map/odom_local_planner/: CMakeLists.txt  package.xml
catkin_ws/src/control/cone_map/odom_local_planner/launch/: mpc_control.launch
catkin_ws/src/control/cone_map/odom_local_planner/src/: main.cpp
catkin_ws/src/control/figure_8_control/: CMakeLists.txt  package.xml
catkin_ws/src/control/flat_image/cone_bounce_control/: CMakeLists.txt  package.xml
catkin_ws/src/control/flat_image/cone_bounce_control/launch/: cone_bounce_control.launch
catkin_ws/src/control/image2d/midpoint_path/: CMakeLists.txt  package.xml
catkin_ws/src/control/image2d/midpoint_path/include/thresholding/: image_converter.h
catkin_ws/src/control/image2d/midpoint_path/src/: image_converter.cpp
catkin_ws/src/control/predefined/figure_eight_control/: CMakeLists.txt  package.xml
catkin_ws/src/control/predefined/figure_eight_control/src/: main.cpp
catkin_ws/src/control/predefined/straight_line_control/: CMakeLists.txt  package.xml
catkin_ws/src/control/predefined/tight_circle_control/: CMakeLists.txt  package.xml
catkin_ws/src/control/predefined/tight_circle_control/launch/: tight_circle_control.launch
catkin_ws/src/control/predefined/tight_circle_control/src/: main.cpp
catkin_ws/src/control/straight_line_control/: CMakeLists.txt  package.xml
catkin_ws/src/drivers/arduino_interface/: CMakeLists.txt
catkin_ws/src/interface/arduino_interface/: CMakeLists.txt
catkin_ws/src/perception/camera/opencv/depth_thresholding/: CMakeLists.txt  package.xml
catkin_ws/src/perception/camera/opencv/depth_thresholding/launch/: thresholding.launch
catkin_ws/src/perception/camera/opencv/depth_thresholding/src/: main.cpp  thresholder.cpp
catkin_ws/src/perception/camera/point_cloud/cone_detection/: CMakeLists.txt  package.xml
catkin_ws/src/perception/camera/point_cloud/cone_detection/include/pcl_cone_detect/: pcl_cone_detector.h
catkin_ws/src/perception/camera/point_cloud/cone_detection/src/: main.cpp  pcl_detector.cpp
catkin_ws/src/perception/camera/point_cloud/point_cloud_clustering/: CMakeLists.txt  package.xml
catkin_ws/src/perception/camera/point_cloud/point_cloud_clustering/include/point_cloud_clustering/: point_cloud_clustering.h
catkin_ws/src/perception/camera/point_cloud/point_cloud_clustering/src/: main.cpp  point_cloud_clustering.cpp
catkin_ws/src/perception/camera/point_cloud/point_cloud_thresholder/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
catkin_ws/src/perception/camera/point_cloud/point_cloud_thresholder/include/point_cloud/: point_cloud_thresholder.h
catkin_ws/src/perception/camera/point_cloud/point_cloud_thresholder/include/point_cloud_thresholder/: clusterer.h  cone_detector.h  thresholder.h
catkin_ws/src/perception/camera/point_cloud/point_cloud_thresholder/launch/: point_cloud_thresholder.launch  thresholding.launch
catkin_ws/src/perception/camera/point_cloud/point_cloud_thresholder/src/: .point_cloud_thresholder.cpp.swp  clusterer.cpp  cone_detector.cpp  main.cpp  point_cloud_thresholder.cpp  thresholder.cpp
catkin_ws/src/perception/opencv/color_thresh/: CMakeLists.txt  package.xml
catkin_ws/src/perception/opencv/color_thresh/include/color_thresh/: color_thresholder.h  image_converter.h
catkin_ws/src/perception/opencv/color_thresh/launch/: color_thresh.launch  zed_cone_detection.launch
catkin_ws/src/perception/opencv/color_thresh/params/: color_thresh.yaml
catkin_ws/src/perception/opencv/color_thresh/src/: color_thresholder.cpp  image_converter.cpp  main.cpp
catkin_ws/src/perception/opencv/midpoint_path/: CMakeLists.txt  package.xml
catkin_ws/src/perception/opencv/midpoint_path/src/: image_converter.cpp
catkin_ws/src/perception/opencv/thresholding/: CMakeLists.txt  package.xml
catkin_ws/src/perception/opencv/thresholding/include/thresholding/: image_converter.h
catkin_ws/src/perception/opencv/thresholding/launch/: zed_cone_detection.launch
catkin_ws/src/perception/opencv/thresholding/src/: image_converter.cpp  main.cpp
catkin_ws/src/perception/perception_msgs/: CMakeLists.txt
rosserialInterface/: PWMController.cpp  rosserialInterface.ino
(+112 files in other folders)
