<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>depth_thresholding</name>
  <version>0.0.0</version>
  <description>
    depth_thresholding package
  </description>

  <license>TODO</license>
  <author>TODO</author>
  <maintainer email="TODO@TODO.com">TODO</maintainer>

  <depend>perception_msgs</depend>
  <depend>image_transport</depend>
  <depend>cv_bridge</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
