<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>point_cloud</name>
  <version>0.0.0</version>
  <description>
    thresholding package
  </description>

  <license>TODO</license>
  <author>TODO</author>
  <maintainer email="TODO@TODO.com">TODO</maintainer>

  <depend>perception_msgs</depend>
  <depend>image_transport</depend>

  <buildtool_depend>catkin</buildtool_depend>
</package>
